tests/error/return.gw
#! [contains] 'return' statement found outside function definition
class C { return;}
